# asa-starter-kit

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  PROJECT_STRUCTURE.md  README.md  SECURITY.md  devbox.json  main.py  pyproject.toml  requirements.txt
domains/: __init__.py
domains/auth/: __init__.py
domains/auth/slices/: __init__.py
domains/auth/slices/login_demo/: __init__.py  handler.py  repository.py  schemas.py  service.py  slice.contract.json  slice.spec.md
domains/auth/slices/login_demo/tests/: __init__.py  test_slice.py
mcp_server/: __init__.py  main.py
mcp_server/handlers/: __init__.py  generate_contract.py  generate_skeleton.py  generate_spec.py
mcp_server/templates/: handler.py.j2  repository.py.j2  schemas.py.j2  service.py.j2  slice.contract.json.j2  slice.spec.md.j2  test_slice.py.j2
orchestrator/: __init__.py  cli.py
orchestrator/asa_lints/: __init__.py  lint_contract_imports.py  lint_contract_json.py  lint_loc_limits.py  lint_slice_structure.py  run_asa_checks.py
shared/: CHANGELOG.md  __init__.py
shared/entities/: __init__.py  user.py
shared/utils/: __init__.py  jwt_service.py  password_hasher.py
shared/value_objects/: __init__.py
tests/: __init__.py  test_asa_linters.py  test_cli.py  test_mcp_server.py  test_shared_utils.py
